# kat

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml  cmake.yml
old/: cat.c  cat_simple.c  kat_long.c  old.c  simple_cat.c
src/: KatConfig.h.in  kat.c  kat_adv.c
tests/: run_tests.sh  run_tests.sh.in  saitama.txt
